--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,6 +1,8 @@
 ---
 ---
-html, body {
+
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -13,7 +15,7 @@ body {
 
 #videosection {
   display: table;
-  background: url('../img/background.jpg') #76776a;
+  background: url("../img/background.jpg") #76776a;
   background-size: cover;
   background-repeat: no-repeat;
   z-index: -1000;
@@ -33,14 +35,14 @@ body {
 
   ul {
     list-style: none;
-    margin:0;
+    margin: 0;
   }
 
   li {
     height: 50px;
-    padding:10px;
-    margin:0;
-    float:left;
+    padding: 10px;
+    margin: 0;
+    float: left;
   }
 
   a {
@@ -67,14 +69,10 @@ body {
 
 #title a,
 .navigation a {
-  font-family: 'Pacifico', cursive;
-   color: white;
-   text-shadow:
-       3px 3px 0 #000,
-     -1px -1px 0 #000,
-      1px -1px 0 #000,
-      -1px 1px 0 #000,
-       1px 1px 0 #000;
+  font-family: "Pacifico", cursive;
+  color: white;
+  text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .section {
@@ -82,7 +80,7 @@ body {
   display: table;
   min-height: 100%;
   width: 100%;
-  margin:0;
+  margin: 0;
 
   text-align: center;
 
@@ -90,18 +88,14 @@ body {
     position: relative;
     margin: 0;
     font-size: 4em;
-    font-family: 'Pacifico', cursive;
-   color: white;
-   text-shadow:
-       3px 3px 0 #000,
-     -1px -1px 0 #000,
-      1px -1px 0 #000,
-      -1px 1px 0 #000,
-       1px 1px 0 #000;
+    font-family: "Pacifico", cursive;
+    color: white;
+    text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+      -1px 1px 0 #000, 1px 1px 0 #000;
   }
 
   a[href] {
-    color: rgb(240, 70, 255)
+    color: rgb(240, 70, 255);
   }
 }
 
@@ -110,15 +104,15 @@ body {
   height: auto;
   border-radius: 50%;
   border: 5px solid #eee;
-  box-shadow: 0 0 1em rgba(0,0,0,0.5);
-  margin-bottom:0;
+  box-shadow: 0 0 1em rgba(0, 0, 0, 0.5);
+  margin-bottom: 0;
 }
 
 .background {
-  background: rgba(255,255,255,0.5);
-  padding:15px;
-  padding-top:45px;
-  border:1px black solid;
+  background: rgba(255, 255, 255, 0.5);
+  padding: 15px;
+  padding-top: 45px;
+  border: 1px black solid;
 }
 
 .desc {
@@ -130,19 +124,15 @@ body {
   text-indent: 2em;
   width: 50%;
   margin: 0 auto;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 1.5em;
-  color:white;
-  text-shadow:
-      1px 1px 0 #000,
-    -1px -1px 0 #000,
-     1px -1px 0 #000,
-     -1px 1px 0 #000,
-      1px 1px 0 #000;
+  color: white;
+  text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 #btn-dl {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   padding: 20px;
   background: lightblue;
   border-radius: 10px;
@@ -154,17 +144,17 @@ body {
   box-sizing: border-box;
 
   &:hover {
-    background:rgb(132, 204, 227);
+    background: rgb(132, 204, 227);
   }
 }
 
 .project {
   display: inline-block;
-  vertical-align:top;
+  vertical-align: top;
   margin: 0 auto;
   margin-top: 15px;
   margin-right: 1px;
-  background: rgba(255,255,255,0.7);
+  background: rgba(255, 255, 255, 0.7);
   height: 185px;
   padding: 15px;
   font-size: 13px;
@@ -180,51 +170,45 @@ body {
     shape-outside: border-box;
   }
   h2 {
-    font-family: 'Oswald', sans-serif;
+    font-family: "Oswald", sans-serif;
     font-size: 2em;
   }
   p {
     color: black;
     width: auto;
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
     text-shadow: none;
     text-indent: 0;
   }
 }
 
 #blog {
-  display:inline-block;
+  display: inline-block;
   width: 150px;
   margin: 0 auto;
-  padding:10px;
-  background:rgba(0,0,0,0.2);
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.2);
 }
 
 #blog a {
-  font-size:1.5em;
+  font-size: 1.5em;
 }
 
-.social a{
+.social a {
   font-size: 2.25em;
   color: white !important;
-  text-shadow:
-      1px 1px 0 #000,
-    -1px -1px 0 #000,
-     1px -1px 0 #000,
-     -1px 1px 0 #000,
-      1px 1px 0 #000;
+  text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000, 1px 1px 0 #000;
   padding: 10px;
 }
 
 .footer {
-	position: absolute;
-	width:100%;
-	bottom:0;
-	color:white;
-	text-align:center;
-
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  color: white;
+  text-align: center;
 }
-
 
 #tubular-player {
   opacity: 0;
